namespace/hello_kube_01/namespace.yaml
# apiVersionとkindは
# kubectl api-resources
# で確認
# https://kubernetes.io/docs/reference/kubectl/generated/kubectl_api-resources/
apiVersion: v1
kind: Namespace
# Namespaceについて
# https://kubernetes.io/docs/tasks/administer-cluster/namespaces
metadata:
  name: hello-kube-01
