namespace/hello_kube_01/deploy.yaml
# apiVersionとkindは
# kubectl api-resources
# で確認
# https://kubernetes.io/docs/reference/kubectl/generated/kubectl_api-resources/
apiVersion: apps/v1
kind: Deployment
# Deploymentについて
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment
metadata:
  name: "nginx-deploy"
  # namespaceの指定
  namespace: hello_kube_01
  # label指定
  labels: 
    # deploy環境について
    environment : "dev"
spec:
  # レプリカ数
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      namespace: "vol-test"
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: "nginx:1.16.1"
          resources:
            # 最小
            requests:
              memory: "1Gi"
              cpu: "0.5"
            # 最大
            limits:
              memory: "2Gi"
              cpu: "1"
          # コンテナが空いてるポート番号
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-pv
            readOnly: false
