namespace/hello_kube_01/service.yaml
# apiVersionとkindは
# kubectl api-resources
# で確認
# https://kubernetes.io/docs/reference/kubectl/generated/kubectl_api-resources/
apiVersion: v1
kind: Service
metadata:
  namespace: hello-kube-01
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: hello-kube-01
  name: ingress-service
spec:
  selector:
    name: http-ingress
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP 
  # from its pool if not specified. You can also specify one manually.
  # loadBalancerIP: 10.194.50.101
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
